--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" type="text/css" href="css/main.css" />
 </head>
 <body>
+	<h1>DAVID VEGA</h1>
+	<p>
+		Bacon ipsum dolor sit amet chicken pork chop filet mignon leberkas chuck, shoulder tongue rump ball tip venison corned beef pancetta meatball tri-tip. Pork chop pancetta t-bone drumstick, ground round filet mignon landjaeger. Tri-tip cow kevin short ribs bresaola bacon pork loin salami ham pork belly pork chop biltong doner tenderloin. Strip steak tail bacon shank, fatback bresaola pastrami shoulder ball tip chuck short ribs ground round pig. Strip steak leberkas beef meatball ham shoulder.
+	</p>
+	<p class="special">
+		Shankle short ribs frankfurter pork belly spare ribs ribeye. Pork hamburger chuck landjaeger, frankfurter pastrami kevin. Pork belly fatback spare ribs, venison ball tip boudin t-bone short ribs sirloin ham hock beef chuck corned beef. Ball tip chuck shank meatloaf meatball rump pork ground round bresaola short ribs pork chop. Filet mignon capicola sausage t-bone hamburger drumstick sirloin rump. Frankfurter pork spare ribs, prosciutto beef ribs salami tail hamburger ham hock.
+	</p>	
 </body>
 </html>
