--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="css/main.css" />
+	<title>Hello!</title>
 </head>
 <body>
 	
 	<h1>David Vega</h1>
-	<img src="DV">
+	<p>Hi! My name is David Vega. These are a few things that I like. and email if you can help me learn coding!</p>
+	<img src="images/BIG.jpg">
+	<img src="images/DELA.jpg">
+  <input type="email" placeholder="Your email">
+  <input type="submit">
 </body>
 </html>
