--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 <body>
 	
 	<h1>David Vega</h1>
-	<p>Hi! My name is David Vega. These are a few things that I like. and email if you can help me learn coding!</p>
+	<p>Hi! My name is David Vega. These are a few things that I like. Reach out and email me if you can help me learn coding!:)</p>
 	<img src="images/BIG.jpg">
 	<img src="images/DELA.jpg">
+	<img src="images/original.jpeg">
+	<img src="images/pollock.number-8.jpg">
   <input type="email" placeholder="Your email">
   <input type="submit">
 </body>
