--- a/Fashion Blog/index.html
+++ b/Fashion Blog/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <title>Sarte's List</title>
-<link rel=”stylesheet” type=”text/css” href=”css/main.css”/>
+<link rel="stylesheet" type="text/css" href="css/main.css" />
 </head>
-  <body>
+<body>
     <div class="header">
       <h1 id="title">Sartre's List</h1>
       <h3>Better-Dressed People</h3>
@@ -20,8 +20,24 @@
       <h2 class="faded">11/12/13</h2>
       <h2>On The Streets in Brooklyn</h2>
       <div class="heroimage">
+        <img src="images/fashion_photo.jpeg">
+      </div>
+      </div>
+	      <p><div class="indent">B</div>acon ipsum dolor sit amet turducken corned beef ribeye salami jowl. Prosciutto chuck brisket flank drumstick spare ribs biltong ribeye tenderloin corned beef meatball ground round. Pastrami turducken ribeye ham hock, short ribs sausage filet mignon pork loin flank boudin strip steak t-bone. Capicola leberkas meatball sirloin, cow flank pastrami. Pork ham hock rump sirloin fatback short ribs t-bone. Ribeye pork belly pancetta bresaola kielbasa turkey capicola sirloin. Salami spare ribs cow pancetta drumstick meatball ball tip.Bacon ipsum dolor sit amet turducken corned beef ribeye salami jowl. Prosciutto chuck brisket flank drumstick spare ribs biltong ribeye tenderloin corned beef meatball ground round. Pastrami turducken ribeye ham hock, short ribs sausage filet mignon pork loin flank boudin strip steak t-bone. Capicola leberkas meatball sirloin, cow flank pastrami. Pork ham hock rump sirloin fatback short ribs t-bone. Ribeye pork belly pancetta bresaola kielbasa turkey capicola sirloin. Salami spare ribs cow pancetta drumstick meatball ball tip.
+	      </p>	
+
+
+      <h2 class="faded">11/11/13</h2>
+      <h2>Vintage in Vogue</h2>
+      <div class="heroimage">
+        <img src="images/fashion_photo2.jpeg">
+      </div>
+      </div>
+        <p><div class="indent">B</div>acon ipsum dolor sit amet turducken corned beef ribeye salami jowl. Prosciutto chuck brisket flank drumstick spare ribs biltong ribeye tenderloin corned beef meatball ground round. Pastrami turducken ribeye ham hock, short ribs sausage filet mignon pork loin flank boudin strip steak t-bone. Capicola leberkas meatball sirloin, cow flank pastrami. Pork ham hock rump sirloin fatback short ribs t-bone. Ribeye pork belly pancetta bresaola kielbasa turkey capicola sirloin. Salami spare ribs cow pancetta drumstick meatball ball tip.Bacon ipsum dolor sit amet turducken corned beef ribeye salami jowl. Prosciutto chuck brisket flank drumstick spare ribs biltong ribeye tenderloin corned beef meatball ground round. Pastrami turducken ribeye ham hock, short ribs sausage filet mignon pork loin flank boudin strip steak t-bone. Capicola leberkas meatball sirloin, cow flank pastrami. Pork ham hock rump sirloin fatback short ribs t-bone. Ribeye pork belly pancetta bresaola kielbasa turkey capicola sirloin. Salami spare ribs cow pancetta drumstick meatball ball tip.
+        </p>  
+
     </div>
     <div class="footer">
     </div>
    </body>
-</html>     
+</html>
