Stop Light Project

--- a/Fashion Blog/index.html
+++ b/Fashion Blog/index.html
@@ -25,8 +25,8 @@
       </div>
 	      <p><div class="indent">B</div>acon ipsum dolor sit amet turducken corned beef ribeye salami jowl. Prosciutto chuck brisket flank drumstick spare ribs biltong ribeye tenderloin corned beef meatball ground round. Pastrami turducken ribeye ham hock, short ribs sausage filet mignon pork loin flank boudin strip steak t-bone. Capicola leberkas meatball sirloin, cow flank pastrami. Pork ham hock rump sirloin fatback short ribs t-bone. Ribeye pork belly pancetta bresaola kielbasa turkey capicola sirloin. Salami spare ribs cow pancetta drumstick meatball ball tip.Bacon ipsum dolor sit amet turducken corned beef ribeye salami jowl. Prosciutto chuck brisket flank drumstick spare ribs biltong ribeye tenderloin corned beef meatball ground round. Pastrami turducken ribeye ham hock, short ribs sausage filet mignon pork loin flank boudin strip steak t-bone. Capicola leberkas meatball sirloin, cow flank pastrami. Pork ham hock rump sirloin fatback short ribs t-bone. Ribeye pork belly pancetta bresaola kielbasa turkey capicola sirloin. Salami spare ribs cow pancetta drumstick meatball ball tip.
 	      </p>
-        <div id="continue">
-        <p>Continue...</p>
+        <div>
+        <a href="http://www.GQ.com" id="continue">Continue...<a>
         </div>	
       <hr>
       <h2 class="faded">11/11/13</h2>
@@ -37,9 +37,9 @@
       </div>
         <p><div class="indent">B</div>acon ipsum dolor sit amet turducken corned beef ribeye salami jowl. Prosciutto chuck brisket flank drumstick spare ribs biltong ribeye tenderloin corned beef meatball ground round. Pastrami turducken ribeye ham hock, short ribs sausage filet mignon pork loin flank boudin strip steak t-bone. Capicola leberkas meatball sirloin, cow flank pastrami. Pork ham hock rump sirloin fatback short ribs t-bone. Ribeye pork belly pancetta bresaola kielbasa turkey capicola sirloin. Salami spare ribs cow pancetta drumstick meatball ball tip.Bacon ipsum dolor sit amet turducken corned beef ribeye salami jowl. Prosciutto chuck brisket flank drumstick spare ribs biltong ribeye tenderloin corned beef meatball ground round. Pastrami turducken ribeye ham hock, short ribs sausage filet mignon pork loin flank boudin strip steak t-bone. Capicola leberkas meatball sirloin, cow flank pastrami. Pork ham hock rump sirloin fatback short ribs t-bone. Ribeye pork belly pancetta bresaola kielbasa turkey capicola sirloin. Salami spare ribs cow pancetta drumstick meatball ball tip.
         </p>
-        <div id="continue">
-        <p>Continue...</p>
-        </div>      
+        <div>
+        <a href="http://www.GQ.com" id="continue">Continue...<a>
+        </div>  
       <hr>
     <div class="footer">
       <nav id="footernav">
@@ -52,5 +52,6 @@
         <a href="">Tips</a>
       </div>  
       </div>
+      <p>2013 Valet Industries, Inc.</p>
    </body>
 </html>
