--- a/Fashion Blog/index.html
+++ b/Fashion Blog/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Sarte's List</title>
-<link rel="stylesheet" type="text/css" href="css/main.css" />
+  <title>Sarte's List</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css" />
 </head>
 <body>
-    <div class="header">
-      <h1 id="title">Sartre's List</h1>
-      <h3>Better-Dressed People</h3>
-      <nav id="headernav">
-        <a href="">Women's</a>
-        <a href="">Men's</a>
-        <a href="">On The Street</a>
-        <a href="">The Catwalk</a>
-        <a href="">AdWatch</a>
-        <a href="">About</a>
+  <div class="header">
+    <h1 id="title">Sartre's List</h1>
+    <h3>Better-Dressed People</h3>
+    <nav id="headernav">
+      <a href="">Women's</a>
+      <a href="">Men's</a>
+      <a href="">On The Street</a>
+      <a href="">The Catwalk</a>
+      <a href="">AdWatch</a>
+      <a href="">About</a>
     </div>
     <div id="maincontent">
       <h2 class="faded">11/12/13</h2>
@@ -22,25 +22,25 @@
       <div class="heroimage">
         <img src="images/fashion_photo.jpeg">
       </div>
-      </div>
-	      <p><div class="indent">B</div>acon ipsum dolor sit amet turducken corned beef ribeye salami jowl. Prosciutto chuck brisket flank drumstick spare ribs biltong ribeye tenderloin corned beef meatball ground round. Pastrami turducken ribeye ham hock, short ribs sausage filet mignon pork loin flank boudin strip steak t-bone. Capicola leberkas meatball sirloin, cow flank pastrami. Pork ham hock rump sirloin fatback short ribs t-bone. Ribeye pork belly pancetta bresaola kielbasa turkey capicola sirloin. Salami spare ribs cow pancetta drumstick meatball ball tip.Bacon ipsum dolor sit amet turducken corned beef ribeye salami jowl. Prosciutto chuck brisket flank drumstick spare ribs biltong ribeye tenderloin corned beef meatball ground round. Pastrami turducken ribeye ham hock, short ribs sausage filet mignon pork loin flank boudin strip steak t-bone. Capicola leberkas meatball sirloin, cow flank pastrami. Pork ham hock rump sirloin fatback short ribs t-bone. Ribeye pork belly pancetta bresaola kielbasa turkey capicola sirloin. Salami spare ribs cow pancetta drumstick meatball ball tip.
-	      </p>
-        <div>
-        <a href="http://www.GQ.com" id="continue">Continue...<a>
-        </div>	
+    </div>
+      <p><div class="indent">B</div>acon ipsum dolor sit amet turducken corned beef ribeye salami jowl. Prosciutto chuck brisket flank drumstick spare ribs biltong ribeye tenderloin corned beef meatball ground round. Pastrami turducken ribeye ham hock, short ribs sausage filet mignon pork loin flank boudin strip steak t-bone. Capicola leberkas meatball sirloin, cow flank pastrami. Pork ham hock rump sirloin fatback short ribs t-bone. Ribeye pork belly pancetta bresaola kielbasa turkey capicola sirloin. Salami spare ribs cow pancetta drumstick meatball ball tip.Bacon ipsum dolor sit amet turducken corned beef ribeye salami jowl. Prosciutto chuck brisket flank drumstick spare ribs biltong ribeye tenderloin corned beef meatball ground round. Pastrami turducken ribeye ham hock, short ribs sausage filet mignon pork loin flank boudin strip steak t-bone. Capicola leberkas meatball sirloin, cow flank pastrami. Pork ham hock rump sirloin fatback short ribs t-bone. Ribeye pork belly pancetta bresaola kielbasa turkey capicola sirloin. Salami spare ribs cow pancetta drumstick meatball ball tip.
+      </p>
+    <div>
+      <a href="http://www.GQ.com" id="continue">Continue...<a>
+      </div>	
       <hr>
       <h2 class="faded">11/11/13</h2>
       <h2>Vintage in Vogue</h2>
       <div class="heroimage">
         <img src="images/fashion_photo2.jpeg">
       </div>
-      </div>
-        <p><div class="indent">B</div>acon ipsum dolor sit amet turducken corned beef ribeye salami jowl. Prosciutto chuck brisket flank drumstick spare ribs biltong ribeye tenderloin corned beef meatball ground round. Pastrami turducken ribeye ham hock, short ribs sausage filet mignon pork loin flank boudin strip steak t-bone. Capicola leberkas meatball sirloin, cow flank pastrami. Pork ham hock rump sirloin fatback short ribs t-bone. Ribeye pork belly pancetta bresaola kielbasa turkey capicola sirloin. Salami spare ribs cow pancetta drumstick meatball ball tip.Bacon ipsum dolor sit amet turducken corned beef ribeye salami jowl. Prosciutto chuck brisket flank drumstick spare ribs biltong ribeye tenderloin corned beef meatball ground round. Pastrami turducken ribeye ham hock, short ribs sausage filet mignon pork loin flank boudin strip steak t-bone. Capicola leberkas meatball sirloin, cow flank pastrami. Pork ham hock rump sirloin fatback short ribs t-bone. Ribeye pork belly pancetta bresaola kielbasa turkey capicola sirloin. Salami spare ribs cow pancetta drumstick meatball ball tip.
-        </p>
-        <div>
-        <a href="http://www.GQ.com" id="continue">Continue...<a>
-        </div>  
-      <hr>
+    </div>
+      <p><div class="indent">B</div>acon ipsum dolor sit amet turducken corned beef ribeye salami jowl. Prosciutto chuck brisket flank drumstick spare ribs biltong ribeye tenderloin corned beef meatball ground round. Pastrami turducken ribeye ham hock, short ribs sausage filet mignon pork loin flank boudin strip steak t-bone. Capicola leberkas meatball sirloin, cow flank pastrami. Pork ham hock rump sirloin fatback short ribs t-bone. Ribeye pork belly pancetta bresaola kielbasa turkey capicola sirloin. Salami spare ribs cow pancetta drumstick meatball ball tip.Bacon ipsum dolor sit amet turducken corned beef ribeye salami jowl. Prosciutto chuck brisket flank drumstick spare ribs biltong ribeye tenderloin corned beef meatball ground round. Pastrami turducken ribeye ham hock, short ribs sausage filet mignon pork loin flank boudin strip steak t-bone. Capicola leberkas meatball sirloin, cow flank pastrami. Pork ham hock rump sirloin fatback short ribs t-bone. Ribeye pork belly pancetta bresaola kielbasa turkey capicola sirloin. Salami spare ribs cow pancetta drumstick meatball ball tip.
+      </p>
+    <div class="continue">
+      <p>Continue...</p>
+    </div>      
+    <hr>
     <div class="footer">
       <nav id="footernav">
         <a href="">Women's</a>
@@ -51,7 +51,7 @@
         <a href="">About</a>
         <a href="">Tips</a>
       </div>  
-      </div>
-      <p>2013 Valet Industries, Inc.</p>
-   </body>
-</html>
+    </div>
+    <p>2013 Valet Industries, Inc.</p>
+  </body>
+  </html>
