--- a/Stop Light/index.html
+++ b/Stop Light/index.html
@@ -9,6 +9,11 @@
 			<div id="green-light"></div>     
 	     	<div id="yellow-light"></div>     
 	     	<div id="red-light"></div> 
-     	</div>    
+     	</div>   
+     	<div class="buttons">
+     		<div id="go"><H1>GO!</H1></div>     
+	     	<div id="slow"><h1>SLOW!</h1></div>     
+	     	<div id="stop"><h1>STOP!</h1></div> 
+     	</div> 
 	</body>
 </html>
