Assignment #2 - Fashion Blog - Feedback

--- a/Fashion Blog/index.html
+++ b/Fashion Blog/index.html
@@ -15,43 +15,44 @@
       <a href="">The Catwalk</a>
       <a href="">AdWatch</a>
       <a href="">About</a>
+    </nav>
+  </div>
+  <div id="maincontent">
+    <h2 class="faded">11/12/13</h2>
+    <h2>On The Streets in Brooklyn</h2>
+    <div class="heroimage"> <!-- Don't believe you need this div. You can style the img directly -->
+      <img src="images/fashion_photo.jpeg">
     </div>
-    <div id="maincontent">
-      <h2 class="faded">11/12/13</h2>
-      <h2>On The Streets in Brooklyn</h2>
-      <div class="heroimage">
-        <img src="images/fashion_photo.jpeg">
-      </div>
-    </div>
-      <p><div class="indent">B</div>acon ipsum dolor sit amet turducken corned beef ribeye salami jowl. Prosciutto chuck brisket flank drumstick spare ribs biltong ribeye tenderloin corned beef meatball ground round. Pastrami turducken ribeye ham hock, short ribs sausage filet mignon pork loin flank boudin strip steak t-bone. Capicola leberkas meatball sirloin, cow flank pastrami. Pork ham hock rump sirloin fatback short ribs t-bone. Ribeye pork belly pancetta bresaola kielbasa turkey capicola sirloin. Salami spare ribs cow pancetta drumstick meatball ball tip.Bacon ipsum dolor sit amet turducken corned beef ribeye salami jowl. Prosciutto chuck brisket flank drumstick spare ribs biltong ribeye tenderloin corned beef meatball ground round. Pastrami turducken ribeye ham hock, short ribs sausage filet mignon pork loin flank boudin strip steak t-bone. Capicola leberkas meatball sirloin, cow flank pastrami. Pork ham hock rump sirloin fatback short ribs t-bone. Ribeye pork belly pancetta bresaola kielbasa turkey capicola sirloin. Salami spare ribs cow pancetta drumstick meatball ball tip.
-      </p>
-    <div>
+    <p><div class="indent">B</div> <!-- This Div should be a span --> a con ipsum dolor sit amet turducken corned beef ribeye salami jowl. Prosciutto chuck brisket flank drumstick spare ribs biltong ribeye tenderloin corned beef meatball ground round. Pastrami turducken ribeye ham hock, short ribs sausage filet mignon pork loin flank boudin strip steak t-bone. Capicola leberkas meatball sirloin, cow flank pastrami. Pork ham hock rump sirloin fatback short ribs t-bone. Ribeye pork belly pancetta bresaola kielbasa turkey capicola sirloin. Salami spare ribs cow pancetta drumstick meatball ball tip.Bacon ipsum dolor sit amet turducken corned beef ribeye salami jowl. Prosciutto chuck brisket flank drumstick spare ribs biltong ribeye tenderloin corned beef meatball ground round. Pastrami turducken ribeye ham hock, short ribs sausage filet mignon pork loin flank boudin strip steak t-bone. Capicola leberkas meatball sirloin, cow flank pastrami. Pork ham hock rump sirloin fatback short ribs t-bone. Ribeye pork belly pancetta bresaola kielbasa turkey capicola sirloin. Salami spare ribs cow pancetta drumstick meatball ball tip. </p>
+    <div> <!-- Don't believe you need this div. You can style the a directly -->
       <a href="http://www.GQ.com" id="continue">Continue...<a>
-      </div>	
-      <hr>
-      <h2 class="faded">11/11/13</h2>
-      <h2>Vintage in Vogue</h2>
-      <div class="heroimage">
-        <img src="images/fashion_photo2.jpeg">
-      </div>
-    </div>
-      <p><div class="indent">B</div>acon ipsum dolor sit amet turducken corned beef ribeye salami jowl. Prosciutto chuck brisket flank drumstick spare ribs biltong ribeye tenderloin corned beef meatball ground round. Pastrami turducken ribeye ham hock, short ribs sausage filet mignon pork loin flank boudin strip steak t-bone. Capicola leberkas meatball sirloin, cow flank pastrami. Pork ham hock rump sirloin fatback short ribs t-bone. Ribeye pork belly pancetta bresaola kielbasa turkey capicola sirloin. Salami spare ribs cow pancetta drumstick meatball ball tip.Bacon ipsum dolor sit amet turducken corned beef ribeye salami jowl. Prosciutto chuck brisket flank drumstick spare ribs biltong ribeye tenderloin corned beef meatball ground round. Pastrami turducken ribeye ham hock, short ribs sausage filet mignon pork loin flank boudin strip steak t-bone. Capicola leberkas meatball sirloin, cow flank pastrami. Pork ham hock rump sirloin fatback short ribs t-bone. Ribeye pork belly pancetta bresaola kielbasa turkey capicola sirloin. Salami spare ribs cow pancetta drumstick meatball ball tip.
-      </p>
-    <div class="continue">
-      <p>Continue...</p>
-    </div>      
+    </div>	
     <hr>
-    <div class="footer">
-      <nav id="footernav">
-        <a href="">Women's</a>
-        <a href="">Men's</a>
-        <a href="">On The Street</a>
-        <a href="">The Catwalk</a>
-        <a href="">AdWatch</a>
-        <a href="">About</a>
-        <a href="">Tips</a>
-      </div>  
+  </div>
+  <div id="maincontent">
+    <h2 class="faded">11/11/13</h2>
+    <h2>Vintage in Vogue</h2>
+    <div class="heroimage"> <!-- Don't believe you need this div. You can style the img directly -->
+      <img src="images/fashion_photo2.jpeg">
     </div>
-    <p>2013 Valet Industries, Inc.</p>
-  </body>
-  </html>
+    <p><div class="indent">B</div>acon ipsum dolor sit amet turducken corned beef ribeye salami jowl. Prosciutto chuck brisket flank drumstick spare ribs biltong ribeye tenderloin corned beef meatball ground round. Pastrami turducken ribeye ham hock, short ribs sausage filet mignon pork loin flank boudin strip steak t-bone. Capicola leberkas meatball sirloin, cow flank pastrami. Pork ham hock rump sirloin fatback short ribs t-bone. Ribeye pork belly pancetta bresaola kielbasa turkey capicola sirloin. Salami spare ribs cow pancetta drumstick meatball ball tip.Bacon ipsum dolor sit amet turducken corned beef ribeye salami jowl. Prosciutto chuck brisket flank drumstick spare ribs biltong ribeye tenderloin corned beef meatball ground round. Pastrami turducken ribeye ham hock, short ribs sausage filet mignon pork loin flank boudin strip steak t-bone. Capicola leberkas meatball sirloin, cow flank pastrami. Pork ham hock rump sirloin fatback short ribs t-bone. Ribeye pork belly pancetta bresaola kielbasa turkey capicola sirloin. Salami spare ribs cow pancetta drumstick meatball ball tip.
+      </p>
+    <div class="continue"> <!-- Don't believe you need this div. You can style the a directly -->
+      <p>Continue...</p>
+    </div>
+  </div>      
+  <hr>
+  <div class="footer">
+    <nav id="footernav">
+      <a href="">Women's</a>
+      <a href="">Men's</a>
+      <a href="">On The Street</a>
+      <a href="">The Catwalk</a>
+      <a href="">AdWatch</a>
+      <a href="">About</a>
+      <a href="">Tips</a>
+    </nav>  
+  </div>
+  <p>2013 Valet Industries, Inc.</p>
+</body>
+</html>
