Assignment #3 - Traffic Light - Feedback

--- a/Stop Light/index.html
+++ b/Stop Light/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
-	<head>
+<head>
 	<title>Traffic Light</title>	
 	<link rel="stylesheet" type="text/css" href="css/main.css" />	
-	</head>
-	<body>
-		<div class="lightbox"> 
-			<div id="green-light"></div>     
-	     	<div id="yellow-light"></div>     
-	     	<div id="red-light"></div> 
-     	</div>   
-     	<div class="buttons">
-     		<div id="go"><H1>GO!</H1></div>     
-	     	<div id="slow"><h1>SLOW!</h1></div>     
-	     	<div id="stop"><h1>STOP!</h1></div> 
-     	</div> 
-	</body>
+</head>
+<body>
+	<div class="lightbox"> 
+		<div id="green-light"></div>     
+     	<div id="yellow-light"></div>     
+     	<div id="red-light"></div> 
+ 	</div>   
+ 	<div class="buttons">
+ 		<div id="go"><h1>GO!</h1></div>     
+     	<div id="slow"><h1>SLOW!</h1></div>     
+     	<div id="stop"><h1>STOP!</h1></div> 
+ 	</div> 
+</body>
 </html>
