--- a/Stop Light/index.html
+++ b/Stop Light/index.html
@@ -15,5 +15,8 @@
 	     	<div id="slow"><h1>SLOW!</h1></div>     
 	     	<div id="stop"><h1>STOP!</h1></div> 
      	</div> 
+     	<script type="text/javascript" 
+     			src="js/application.js">
+		</script>
 	</body>
 </html>
