--- a/Stop Light/index.html
+++ b/Stop Light/index.html
@@ -16,12 +16,9 @@
 	     	</div> 
      	</div>   
      	<div class="buttons">
-     		<div id="go" onclick="go()"><h1>GO!</h1></div>     
-	     	<div id="slow" onclick="go()"><h1>SLOW!</h1></div>     
-	     	<div id="stop" onclick="go()"><h1>STOP!</h1></div> 
+     		<div id="go" onclick="go('green')"><h1>GO!</h1></div>     
+	     	<div id="slow" onclick="go('yellow')"><h1>SLOW!</h1></div>     
+	     	<div id="stop" onclick="go('red')"><h1>STOP!</h1></div> 
      	</div> 
-     	<script type="text/javascript" 
-     			src="js/application.js">
-		</script>
 	</body>
 </html>
