--- a/Stop Light/index.html
+++ b/Stop Light/index.html
@@ -8,9 +8,9 @@
 	</head>
 	<body>
 		<div class="lightbox"> 
-			<div id="green-light">
+			<div id="green-light" onclick="myAlert('This is my sentence')">
 			</div>     
-	     	<div id="yellow-light">
+	     	<div id="yellow-light" onclick="myAlert('Hi my name is Slim Shady')">
 	     	</div>     
 	     	<div id="red-light">
 	     	</div> 
