--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -4,7 +4,7 @@
 	<script type="text/javascript" src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/main.css"/>
-	<title>END DIABETES</title>
+	<title></END DIABETES></title>
 </head>
 <body>
 	<div id="header">
@@ -12,63 +12,58 @@
 	</div>
 	<div class="body">
 		<h1>END DIABETES</h1>
-		<div class="container-div">
-			<div class="inner"></div>
-			<div class="inner2"></div>
+		<div class="container">
+			<div class="bar inner1" transition-height="50"></div>
+			<div class="bar inner2" transition-height="100"></div>
+			<div class="bar inner3" transition-height="250"></div>
+			<div class="bar inner4" transition-height="300"></div>
 		</div>
 		<p>
 			My motivation behind this site is to combined all of the different
 			resources that I have come across in my journey towards a heathlier 
 			life style.</p>
-			<p>I have come to realize that Diabetes, a problem with blood sugar and insulin resistance, has become an epidemic in America and the world in general. I have personally been affected by this disease, both of mvy parents are diabetics, both of my grand fathers where eventually killed by this awful condition that can be prevented in many cases.</p> 
- 
-
-		</p>
+			<p>I have come to realize that Diabetes, a problem with blood sugar and insulin resistance, has become an epidemic in America and the world in general. I have personally been affected by this disease, both of my parents are diabetics, both of my grand fathers where eventually killed by this awful condition that can be prevented in many cases.</p>
+			<p>I believe that being healthy is a very general term and what constitutes are a healthy life style is a very subjective topic. What works for some does not work for others. Everyone has a different body type and different needs that have to be meet to achieve optimal health.
+			I hope that I can show a different side of health that will possibly encourage people to think differently about what they have come to believe over the past 30 or so years.	
+ 		</p>
 	</div>
 	<div class="infograph">
 		<img src="images/INFOGRAPH.gif">
 	</div>
 	<div id="books">
-		<p>Check out these books for great information</p>
-		<div id="container">
-			<div class="wrapper">
-				<img src="images/grainbrain.jpg"><br>
-					<p>Grain Brain<br>
-					David Perlmutter, MD</p>
-					</div>
-			<div class="wrapper2">		
-				<img src="images/wheatbelly.jpg"><br>
-					<p>Wheat Belly<br>
-					Dr. William Davis</p>
-					</div>
-			<div class="wrapper3">		
-				<img src="images/bigfat.jpg"><br>
-					<p>The Big Fat Suprise<br>
-					Nina Teicholz</p>
-				</div>
-			<div class="wrapper4">	
-				<img src="images/whyfat.jpg"><br>
-					<p>Why We Get Fat<br>
-					Gary Taubes</p></div>						
-		</div>
+		<h2>Highly Recommended Readings</h2>
+		<img src="images/books.gif">
 	</div>
+	<h2>Alternative Health Videos</h2>
+	<div id="videowrap">
 		<div class="videos">
 			<iframe width="560" height="315" src="//www.youtube.com/embed/qwrHmgOJpp4" frameborder="0" allowfullscreen></iframe>
 		</div>
 		<div class="videos">
-			<iframe width="560" height="315" src="//www.youtube-nocookie.com/embed/qwrHmgOJpp4" frameborder="0" allowfullscreen></iframe>
+			<iframe width="560" height="315" src="//www.youtube-nocookie.com/embed/oOWd5WMGAe4" frameborder="0" allowfullscreen></iframe>
 		</div>
 		<div class="videos">
-			<iframe width="560" height="315" src="//www.youtube.com/embed/qwrHmgOJpp4" frameborder="0" allowfullscreen></iframe>
+			<iframe width="560" height="315" src="//www.youtube-nocookie.com/embed/eUd9rRSLY4A" frameborder="0" allowfullscreen></iframe>
 	</div>
+	<div class="videos">
+			<iframe width="560" height="315" src="//www.youtube-nocookie.com/embed/ceFyF9px20Y" frameborder="0" allowfullscreen></iframe>
+	</div>
+	<div class="videos">
+			<iframe width="560" height="420" src="//www.youtube-nocookie.com/embed/fvKdYUCUca8" frameborder="0" allowfullscreen></iframe>
+	</div>
+</div>
+</div>
+		<h2>Great Alternative Health Websites</h2>
+		<div id="linkback">
 		<a class="links">
 			<a href="http://www.bulletproofexec.com">Bulletproof Executive</a><br>
 			<a href="http://www.fatburningman.com">Fat-Burning Man</a><br>
 			<a href="http://www.wheatbellyblog.com/">Wheat Belly Blog</a><br>
 			<a href="http://www.thebigfatsurprise.com/">The Big Fat Suprise</a><br>
 		</a>
-
+		</div>
 	<div id="footer">
+		<img src="images/footer.gif">
 	</div>
 
 </body>
